REGRESSION(r290470): CDMInstanceSession::setLogIdentifier must be guarded with !RELEASE_LOG_DISABLED https://bugs.webkit.org/show_bug.cgi?id=237302

Unreviewed build fix.


* GPUProcess/media/RemoteCDMInstanceSessionProxy.cpp:
(WebKit::RemoteCDMInstanceSessionProxy::setLogIdentifier):



Canonical link: https://commits.webkit.org/247899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290626 268f45cc-cd09-0410-ab3c-d52691b4dbfc